--- a/weatherapp/src/pages/home/home.html
+++ b/weatherapp/src/pages/home/home.html
@@ -1,34 +1,26 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Weather</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding class="homePage">
-  
-  
   <ion-grid *ngIf="weather">
-  
-  city
-  <h2 class="location">{{weather.name}}</h2>
-  <h2 class="location">{{weather.main.temp}}</h2>
-  <h2 class="location">{{weather.weather[0].main}}</h2>
-  
-    
-  
-
-
-
-<ion-thumbnail><img src="http://openweathermap.org/img/w/{{weather.weather[0].icon}}.png"></ion-thumbnail>
-
-
- 
-
-
-
-  
-  
- 
-    
+    <ion-row> 
+      <ion-col>
+      <h2 class="location">{{weather.name}},{{weather.sys.country}}</h2>
+      <div class ="icon">
+          <img src="http://openweathermap.org/img/w/{{weather.weather[0].icon}}.png">
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-item><h2 class="mainTemp">Temp: {{weather.main.temp}}°F</h2></ion-item>
+        <ion-item><h2 class="maxTemp">High: {{weather.main.temp_max}}°F</h2></ion-item>
+        <ion-item><h2 class="minTemp">Low: {{weather.main.temp_min}}°F</h2></ion-item>
+        <ion-item><h2 class="humidity">Humidity: {{weather.main.humidity}}%</h2></ion-item>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content>
